dist_man1_MANS=

if BUILD_BUBCOIND
  dist_man1_MANS+=bubcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bubcoin-qt.1
endif

if BUILD_BUBCOIN_CLI
  dist_man1_MANS+=bubcoin-cli.1
endif

if BUILD_BUBCOIN_TX
  dist_man1_MANS+=bubcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BUBCOIN_WALLET
  dist_man1_MANS+=bubcoin-wallet.1
endif
endif
